--- a/src/package.xml
+++ b/src/package.xml
@@ -50,5 +50,9 @@
     <members>*</members>
     <name>PermissionSet</name>
   </types>
+    <types>
+    <members>*</members>
+    <name>Profile</name>
+  </types>
   <version>45.0</version>
 </Package>
